# imgop

./: Makefile  README.md  pyproject.toml
src/imagefixer/: __init__.py  cli.py  core.py
src/imgop/: __init__.py  cli.py  core.py
tests/: __init__.py  test_cli.py  test_core.py
